fix: hide scrollbar on side bar

--- a/src/styles/ui/layout.module.css
+++ b/src/styles/ui/layout.module.css
@@ -21,6 +21,14 @@
   flex-direction: column;
   overflow-y: auto;
   z-index: 10;
+
+  /* Hide scrollbar */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none; 
 }
 
 .sidebarBottom {
